--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<h1>Welcome Himakan</h1>
+<div>
+  <a href="/facetracking-effector/">FaceTracking Effector</a>
+</div>
+</html>
